--- a/quisas.html
+++ b/quisas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Tienda Online</title>
     <link rel="stylesheet" href="si.css">
-    <link rel="stylesheet" href="no.html">
+    <link rel="stylesheet" href="index.html">
 </head>
 <body>
     <header> 
