--- a/quisas.html
+++ b/quisas.html
@@ -14,7 +14,7 @@
             <h1>VintageByte</h1>
              <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="no.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#ok">comentarios</a></li>
                     <li><a href="no.html#nosotros">Nosotros</a></li>
                     <li><a href="#contactos">Contacto</a></li>
